package gameLogic.goban;


public enum FieldType {
    BLACK, WHITE, EMPTY
}

