package gameLogic.goban;


interface GobanUpdater {

    int checkLiberties();

    void setEmpty();
}