package gameLogic.goban;


public enum MoveState {

    CONFIRMED, OCCUPIEDFIELD, SUICIDMOVE, KO
}
